--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,7 +1,7 @@
-We’re introducing new ways to keep your phone number private on Signal.
+نُقدم طرقًا جديدة لتُبقي رقم هاتفك خاصًا على سيجنال.
 
 • لن يبقى رقم هاتفك مرئيًا لأي أحد في آخر إصدار من سيجنال إلاّ إذا كان مسجلاً على هاتفه في جهات اتصاله. يُمكنك تغيير هذا في إعدادات سيجنال.
 
 • يمكنك الآن إعداد ومشاركة اسم مستخدم اختياري لتُتيح للناس الدردشة دون إعطائهم رقم هاتفك.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• يُتيح لك إعداد الخصوصية الجديد التحكّم في من يمكنه العثور عليك عن طريق رقم هاتفك على تطبيق سيجنال.
