--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,8 +1,8 @@
-We’re introducing new ways to keep your phone number private on Signal.
+Signal ขอแนะนำวิธีใหม่ที่จะรักษาความเป็นส่วนตัวให้หมายเลขโทรศัพท์ของคุณ
 
 • ระบบจะไม่แสดงหมายเลขโทรศัพท์ของคุณให้ผู้อื่นเห็นอีกต่อไป (สำหรับ Signal เวอร์ชันล่าสุด) เว้นแต่ว่าหมายเลขโทรศัพท์จะถูกบันทึกไว้ในรายชื่อผู้ติดต่อบนโทรศัพท์ของผู้ใช้คนนั้น โดยสามารถแก้ไขตัวเลือกนี้ได้ในการตั้งค่า
 
 • คุณยังสามารถเลือกกำหนดชื่อผู้ใช้ พร้อมแชร์เพื่อเริ่มต้นแชทโดยไม่จำเป็นต้องบอกหมายเลขโทรศัพท์กับใคร
 
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• การตั้งค่าความเป็นส่วนตัวใหม่ที่ทำให้ควบคุมได้ว่าจะอนุญาตให้ใครใช้หมายเลขโทรศัพท์ในการค้นหาคุณได้
