--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,7 +1,7 @@
-We’re introducing new ways to keep your phone number private on Signal.
+Ми додаємо нові налаштування, які допоможуть вам приховати свій номер телефону в Signal.
 
-• Ваш номер більше не відображатиметься для інших користувачів, за винятком тих, хто має його у своїх контактах. Цей параметр можна змінити в налаштуваннях.
+• Для всіх користувачів найновішої версії Signal ваш номер телефону більше не відображатиметься, якщо вони не мають його серед збережених контактів на телефоні. Цей параметр можна змінити в налаштуваннях.
 
-• Тепер ви можете встановити додаткове ім'я користувача, поділитися ним і розпочати чат, не повідомляючи людині свій номер телефону.
+• Тепер на бажання ви можете обрати собі ім'я користувача, ділитися ним і спілкуватися, не повідомляючи людям свого номера телефону.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• Новий параметр конфіденційності дозволяє контролювати, хто може знаходити вас у Signal за номером телефону.
