--- a/Signal/translations/ug.lproj/Localizable.strings
+++ b/Signal/translations/ug.lproj/Localizable.strings
@@ -7790,7 +7790,7 @@
 "USERNAME_SELECTION_NOT_AVAILABLE_ERROR_MESSAGE" = "بۇ ئىشلەتكۈچى نامىنى ئىشلەتكىلى بولمايدۇ.";
 
 /* An error message shown when the user has attempted too many username reservations. */
-"USERNAME_SELECTION_RESERVATION_RATE_LIMITED_ERROR_MESSAGE" = "Too many attempts made, please try again later.";
+"USERNAME_SELECTION_RESERVATION_RATE_LIMITED_ERROR_MESSAGE" = "زىيادە كۆپ قېتىم سىنىدىڭىز، كېيىنرەك قايتا سىناڭ.";
 
 /* The placeholder for a text field into which users can type their desired username. */
 "USERNAME_SELECTION_TEXT_FIELD_PLACEHOLDER" = "ئىشلەتكۈچى نامى";
@@ -7805,7 +7805,7 @@
 "USERNAME_SELECTION_ZERO_DISCRIMINATOR_ERROR_MESSAGE" = "ئىشلەتكۈچى نامى 00 بىلەن ئاياغلاشسا بولمايدۇ. 1-9 ئارىلىقىدىكى باشقا سانلارنى سىناپ بېقىڭ";
 
 /* An error message indicating that a usernames-related requeset failed because of a network error. */
-"USERNAMES_REMOTE_MUTATION_ERROR_DESCRIPTION" = "Usernames can only be updated when connected to the internet.";
+"USERNAMES_REMOTE_MUTATION_ERROR_DESCRIPTION" = "ئىشلەتكۈچى نامىنى تورغا ئۇلانغاندىلا ئاندىن يېڭىلىغىلى بولىدۇ.";
 
 /* error label near a field */
 "VALIDATION_ERROR_CANNOT_BE_BLANK" = "ئۈسكۈنە ئىسمى قۇرۇق قالسا بولمايدۇ";
