--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,8 +1,8 @@
-We’re introducing new ways to keep your phone number private on Signal.
+Zavádíme nové způsoby, jak můžete udržet své telefonní číslo ve službě Signal v soukromí.
 
 • Vaše telefonní číslo už v nejnovější verzi Signal nikdo neuvidí, jestliže ho nemá uložené v kontaktech telefonu. Změnit to můžete v nastavení.
 
 • Nyní si lze nastavit a sdílet volitelné uživatelské jméno, pomocí kterého se lidé s vámi mohou spojit, aniž by potřebovali znát vaše telefonní číslo.
 
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• Pomocí nového nastavení soukromí můžete určit, kdo vás podle vašeho čísla v aplikaci Signal najde.
