--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,7 +1,7 @@
-We’re introducing new ways to keep your phone number private on Signal.
+Signal에서 전화번호를 비공개로 유지하는 새로운 방법을 도입했습니다.
 
 • 최신 버전 Signal에서는 내 전화번호를 연락처에 저장한 사람을 제외하고 더 이상 다른 사람에게 내 전화번호가 표시되지 않습니다. 설정에서 이 옵션을 변경할 수 있습니다.
 
 • 이제 선택적 사용자 이름을 설정하고 공유하여 전화번호를 공유하지 않고 다른 사람과 대화할 수 있습니다.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• 새로운 개인정보 보호 설정을 사용하면 Signal에서 전화번호를 사용하여 나를 찾을 수 있는 사용자를 컨트롤할 수 있습니다.
