--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,7 +1,7 @@
-We’re introducing new ways to keep your phone number private on Signal.
+Представляем новые способы сохранения конфиденциальности вашего номера телефона в Signal.
 
 • Ваш номер телефона больше никому не будет виден в последней версии Signal, если только он не сохранен в контактах телефона. Вы можете изменить это в Настройках.
 
 • Теперь вы можете задать дополнительное имя пользователя и поделиться им, чтобы люди могли общаться с вами, не зная номер вашего телефона.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• Новая настройка конфиденциальности для контроля, кто может найти вас по номеру телефона в Signal.
