--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,7 +1,7 @@
-We’re introducing new ways to keep your phone number private on Signal.
+Vi introducerar nya sätt att hålla ditt telefonnummer privat på Signal.
 
 • I den senaste versionen av Signal kommer ditt telefonnummer inte längre att vara synligt för någon, om de inte har det sparat i telefonens kontakter. Du kan ändra detta i Inställningar.
 
 • Du kan nu ange och dela ett valfritt användarnamn så att personer kan chatta med dig utan att behöva ange ditt telefonnummer.
 
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• Med en ny integritetsinställning kan du styra vem som kan hitta dig på Signal via ditt telefonnummer.
