--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,7 +1,1 @@
-We’re introducing new ways to keep your phone number private on Signal.
-
-• Your phone number will no longer be visible to anyone on the latest version of Signal unless they have it saved in their phone’s contacts. You can change this in Settings.
-
-• You can now set and share an optional username to let people chat with you without giving them your phone number.
-
-• A new privacy setting lets you control who can find you by your phone number on Signal.
+• Keep tabs on your calls with the new calls tab. Start a new call or return a call that you missed without having to find the corresponding chat. Now you can say hello with your voice without also saying goodbye to the unread marker for messages in that thread.
